ajuste de teste

--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
     <div class="header">
         <img class="logo" src="./images/logo.png" width="130px" alt="homem segurando arma em posição de ataque escrito Ernesto Guns embaixo">
 
-        <h1>Capacitação em Armas de fogo  e Treinamento Especiais</h1>
+        <h1>Capacitação em Armas de Fogo  e Treinamento Especiais</h1>
         <div class="redes">
 
             <a href="https://www.instagram.com/ernestoguns/" target="_blank">
