--- a/index2.html
+++ b/index2.html
@@ -96,10 +96,10 @@
       </div>
     </section>
 
-    <div class="-fluid footer">
-      <div class="container">
+    <div class="container-fluid footer">
+      <footer class="container margin">
         <p>Footer</p>
-      </div>
+      </footer>
     </div>
 
 </body>
