--- a/index2.html
+++ b/index2.html
@@ -96,11 +96,18 @@
       </div>
     </section>
 
-    <div class="container-fluid footer">
-      <footer class="container margin">
-        <p>Footer</p>
-      </footer>
-    </div>
+    <footer class="text-muted">
+      <div class="container">
+        <p class="float-right">
+          <a href="#">Início</a>
+        </p>
+        <p>QND 14 Lote 02 Sala 104, Taguatinga Norte</p>
+        <p>Tel.: 61 3247-0313</p>
+        <p>ernestoguns.cop@gmail.com</p>
+        <center><p>Desenvolvido por <a href="www.fivetdigital.com.br">Fivet Digital</a>.</p></center>
+      </div>
+    </footer>
+
 
 </body>
 </html>
