--- a/index2.html
+++ b/index2.html
@@ -96,7 +96,7 @@
       </div>
     </section>
 
-    <footer class="text-muted">
+    <footer class="text-muted footer">
       <div class="container">
         <p class="float-right">
           <a href="#">Início</a>
@@ -104,7 +104,7 @@
         <p>QND 14 Lote 02 Sala 104, Taguatinga Norte</p>
         <p>Tel.: 61 3247-0313</p>
         <p>ernestoguns.cop@gmail.com</p>
-        <center><p>Desenvolvido por <a href="www.fivetdigital.com.br">Fivet Digital</a>.</p></center>
+        <p1>Desenvolvido por <a href="www.fivetdigital.com.br">Fivet Digital</a>.</p1>
       </div>
     </footer>
 
